--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">AM Music</string>
+    <string name="select_your_music_preferences">Select your music preferences</string>
+    <string name="gospel">Gospel</string>
+    <string name="reggae">Reggae</string>
+    <string name="rumba">Rumba</string>
+    <string name="rnb">RnB</string>
+    <string name="techno">Techno</string>
+    <string name="soul">Soul</string>
+    <string name="country">Country</string>
+    <string name="hip_hop">Hip Hop</string>
+    <string name="jazz">Jazz</string>
+    <string name="rock">Rock</string>
+    <string name="instrumental">Instrumental</string>
+    <string name="pop">Pop</string>
+    <string name="skip">SKIP</string>
+    <string name="continue_to_mList">continue</string>
 </resources>
