add strings to resource files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="pop">Pop</string>
     <string name="skip">SKIP</string>
     <string name="continue_to_mList">continue</string>
+    <string name="user_mBeater">WHAT SHOULD mBEATERS CALL YOU?</string>
 </resources>
