--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,7 @@
     <string name="heinrich_heine">~Heinrich Heine</string>
     <string name="back">back</string>
     <string name="next">next</string>
+    <string name="top_trending_songs">Trending songs today</string>
+    <string name="attention">Attention</string>
+    <string name="attention">Attention</string>
 </resources>
